# geometry-solver

./: .gitignore  README.md  pyproject.toml  todo.md
src/: example_usage.py
src/geometry_solver/: plane.py
src/geometry_solver/core/: core.py
src/geometry_solver/definitions/: definitions.py
src/geometry_solver/models/: basic_objects.py  circle.py  polygons.py
src/geometry_solver/utils/: naming.py  utils.py
tests/: test_definitions.py
