[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "geometry_solver"
version = "0.1.0"
requires-python = ">= 3.8"
authors = [
  {name = "Maxim Degi", email = "unliex@yandex.ru"}
]
description = "repo to automatically find solution to tasks from school maths"
readme = "README.md"
keywords = ["maths", "school", "calculation", "geometry"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true
mypy_path=src